reference_mutableErr2/reference_mutableErr2.log
   Compiling reference_mutableErr2 v0.1.0 (/home/haha/Rust/reference_mutableErr2)
error[E0502]: cannot borrow `s` as mutable because it is also borrowed as immutable
 --> src/main.rs:6:14
  |
4 |     let r1 = &s;//no problem
  |              -- immutable borrow occurs here
5 |     let r2 = &s;//no problem
6 |     let r3 = &mut s;//ERROR
  |              ^^^^^^ mutable borrow occurs here
7 |
8 |     println!("{r1} {r2} {r3}");
  |               ---- immutable borrow later used here

For more information about this error, try `rustc --explain E0502`.
error: could not compile `reference_mutableErr2` (bin "reference_mutableErr2") due to 1 previous error
